# devops_assistant

./: .cursorrules  .gitignore  EXECUTION_STEPS.md  HACKATHON_SUMMARY.md  LICENSE  PARALLAX_CLUSTER_SETUP.md  PUSH_TO_GITHUB.md  README.md  p2p.key  pyproject.toml  requirements.txt  setup.py
docs/: ARCHITECTURE.md  INSTALLATION.md  PROJECT_INTRO.md  QUICKSTART.md  SETUP_PARALLAX.md  TEST_CASES.md
src/: __init__.py  client.py  config.py  main.py  prompts.py  utils.py
tests/: README.md  TEST_RESULTS.md  __init__.py  conftest.py  run_automated_tests.py  run_tests.sh  test_client.py  test_config.py  test_main.py  test_runner.py  test_utils.py
